--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -1,9 +1,12 @@
 {
   "name": "instagram-api",
   "version": "0.0.0",
+  "engines": {
+    "node":"14.x"
+  },
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
