--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "instagram-api",
   "version": "0.0.0",
-  "main":"app.js",
+  "main": "app.js",
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   },
   "private": true,
   "scripts": {
@@ -24,7 +24,9 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
-    "sequelize": "^6.29.3",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.30.0",
     "twilio": "^4.8.0"
   }
 }
