--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "instagram-api",
   "version": "0.0.0",
-  "main":"app.js",
+  "main": "app.js",
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   },
   "private": true,
   "scripts": {
@@ -26,5 +26,7 @@
     "nodemon": "^2.0.21",
     "sequelize": "^6.29.3",
     "twilio": "^4.8.0"
-  }
+  },
+  "auther": "Yash Prajapati",
+  "license": "ISC"
 }
