--- a/instagram-ng14/package.json
+++ b/instagram-ng14/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
+    "ng-image-slider": "^7.0.0",
+    "ngx-slick-carousel": "^15.0.0",
     "nodemon": "^2.0.21",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-beta1",
     "zone.js": "~0.12.0"
