--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
@@ -24,6 +26,10 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
+    "passport-oauth2": "^1.7.0",
     "sequelize": "^6.29.3",
     "twilio": "^4.8.0"
   },
