--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -7,7 +7,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
