--- a/instagram-ng14/package.json
+++ b/instagram-ng14/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@material/dialog": "^14.0.0",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "ng-image-slider": "^7.0.0",
