--- a/instagram-ng14/package.json
+++ b/instagram-ng14/package.json
@@ -22,7 +22,10 @@
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "ng-image-slider": "^7.0.0",
+    "ngx-infinite-scroll": "^15.0.0",
     "ngx-slick-carousel": "^15.0.0",
+    "ngx-toastr": "^16.1.1",
+    "ngx-ui-loader": "^13.0.0",
     "nodemon": "^2.0.21",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
