--- a/instagram-ng14/package.json
+++ b/instagram-ng14/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@coreui/coreui": "^4.2.6",
+    "@ctrl/ngx-emoji-mart": "^7.1.0",
     "@material/dialog": "^14.0.0",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
