--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -30,7 +30,9 @@
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
     "passport-oauth2": "^1.7.0",
-    "sequelize": "^6.29.3",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.0",
     "twilio": "^4.8.0"
   },
   "auther": "Yash Prajapati",
