--- a/instagram-api/package.json
+++ b/instagram-api/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
+    "passport-google-oauth2": "^0.2.0",
     "passport-oauth2": "^1.7.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
